rspec, rspec_rails

--- a/config/.rubocop.yml
+++ b/config/.rubocop.yml
@@ -63,7 +63,9 @@ AllCops:
     - 'tmp/**/*'
     - 'vendor/**/*'
     - '.git/**/*'
-  require: rubocop-rails
+  require: 
+    - rubocop-rails
+    - rubocop-rspec
     # Default formatter will be used if no `-f/--format` option is given.
   DefaultFormatter: progress
   # Cop names are displayed in offense messages by default. Change behavior
