significant changes to rubocop.yml

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,7 +28,7 @@ Style/Alias:
   Enabled: false
 
 Style/HashLikeCase:
-  Enabled: false
+  Enabled: true
 
 Style/Documentation:
   Enabled: false
@@ -46,7 +46,7 @@ RSpec/ExampleLength:
   Enabled: false
 
 RSpec/VerifiedDoubles:
-  Enabled: false
+  Enabled: true
 
 Naming/VariableNumber:
   Exclude:
@@ -68,7 +68,7 @@ Lint/AmbiguousBlockAssociation:
     - 'spec/**/*_spec.rb'
 
 Metrics/AbcSize:
-  Enabled: false
+  Enabled: true
 
 Metrics/ModuleLength:
   Enabled: false
