--- a/config/.rubocop.yml
+++ b/config/.rubocop.yml
@@ -947,7 +947,7 @@ Layout/IndentationWidth:
   # Number of spaces for each indentation level.
   Width: 2
   AllowedPatterns: []
-  IgnoredPatterns: [] # deprecated
+  # IgnoredPatterns: [] # deprecated
 
 Layout/InitialIndentation:
   Description: >-
@@ -1030,7 +1030,7 @@ Layout/LineLength:
   # elements. Strings will be converted to Regexp objects. A line that matches
   # any regular expression listed in this option will be ignored by LineLength.
   AllowedPatterns: []
-  IgnoredPatterns: [] # deprecated
+  # IgnoredPatterns: [] # deprecated
 
 Layout/MultilineArrayBraceLayout:
   Description: >-
@@ -1505,7 +1505,7 @@ Lint/AmbiguousBlockAssociation:
   VersionChanged: '1.13'
   AllowedMethods: []
   AllowedPatterns: []
-  IgnoredMethods: [] # deprecated
+  # IgnoredMethods: [] # deprecated
 
 Lint/AmbiguousOperator:
   Description: >-
@@ -1599,7 +1599,7 @@ Lint/Debugger:
   Enabled: true
   VersionAdded: '0.14'
   VersionChanged: '1.10'
-  DebuggerReceivers: [] # deprecated
+  # DebuggerReceivers: [] # deprecated
   DebuggerMethods:
     # Groups are available so that a specific group can be disabled in
     # a user's configuration, but are otherwise not significant.
@@ -2361,7 +2361,7 @@ Lint/UnreachableLoop:
     # RSpec uses `times` in its message expectations
     # eg. `exactly(2).times`
     - !ruby/regexp /(exactly|at_least|at_most)\(\d+\)\.times/
-  IgnoredPatterns: [] # deprecated
+  # IgnoredPatterns: [] # deprecated
 
 Lint/UnusedBlockArgument:
   Description: 'Checks for unused block arguments.'
@@ -2478,7 +2478,7 @@ Metrics/BlockLength:
   CountComments: false  # count full line comments?
   Max: 25
   CountAsOne: []
-  ExcludedMethods: [] # deprecated, retained for backwards compatibility
+  # ExcludedMethods: [] # deprecated, retained for backwards compatibility
   AllowedMethods:
     # By default, exclude the `#refine` method, as it tends to have larger
     # associated blocks.
@@ -2528,7 +2528,7 @@ Metrics/MethodLength:
   CountComments: false  # count full line comments?
   Max: 10
   CountAsOne: []
-  ExcludedMethods: [] # deprecated, retained for backwards compatibility
+  # ExcludedMethods: [] # deprecated, retained for backwards compatibility
   AllowedMethods: []
   AllowedPatterns: []
   IgnoredMethods: [] # deprecated
@@ -2790,7 +2790,7 @@ Naming/MethodName:
   #     - '\A\s*onSelectionCleared\s*'
   #
   AllowedPatterns: []
-  IgnoredPatterns: [] # deprecated
+  # IgnoredPatterns: [] # deprecated
 
 Naming/MethodParameterName:
   Description: >-
@@ -4081,7 +4081,7 @@ Style/MethodCallWithArgsParentheses:
   AllowedMethods: []
   IgnoredMethods: [] # deprecated
   AllowedPatterns: []
-  IgnoredPatterns: [] # deprecated
+  # IgnoredPatterns: [] # deprecated
   IncludedMacros: []
   AllowParenthesesInMultilineCall: false
   AllowParenthesesInChaining: false
